# adaptive-elastic-sae

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-llama.txt
adaptive_elastic_sae/data/: llm_streamer.py  synthetic.py
adaptive_elastic_sae/saes/: base.py  polyhedral.py  top_k.py  vanilla.py
adaptive_elastic_sae/training/: gpu_metrics.py  llm_batch_provider.py  llm_metrics.py  llm_trainer.py  metrics.py  trainer.py  trainer_utils.py
configs/: llm_llama7b_full.yaml  llm_pythia.yaml  llm_pythia_sweep.yaml  llm_pythia_test.yaml  spiked_model.yaml  spiked_model_baseline_calibration.yaml  spiked_model_high_rho.yaml  spiked_model_regularization_ablation.yaml
configs/llama8b/: llama8b_ghost_grad_baseline.yaml  llama8b_reg1.yaml  llama8b_reg2.yaml  llama8b_reg3.yaml  llama8b_reg4.yaml  llama8b_reg5.yaml  llama8b_regularization.yaml  llama8b_test.yaml  llama8b_topk_baseline.yaml
configs/pythia70m/: llm_pythia70m_test.yaml  pythia70m_regularization.yaml  pythia70m_regularization_seed1.yaml  pythia70m_regularization_seed2.yaml  pythia70m_test.yaml  pythia70m_topk_baseline.yaml
configs/spiked/: p1.yaml  p2.yaml  p3.yaml  p4.yaml  p5.yaml  spiked_model_sweep.yaml
notebooks/: pythia70m_final_summary.csv  spiked_final_summary.csv  wandb_download_history.ipynb
scripts/: run_llm.py  run_llm_pythia.py  run_spiked.py
src/saes/: vanilla.py
src/training/: metrics.py
