[project]
name = "adaptive-elastic-sae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "einops>=0.8.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "pyyaml>=6.0.3",
    "torch>=2.11.0",
    "transformer-lens>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=4.41,<5",
    "wandb>=0.25.1",
    "sae-lens>=6.39.0",
]
